--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,8 @@
 ---
-import Footer from "../components/Footer.astro";
-import Head from "../components/Head.astro";
-import Navigation from "../components/Navigation.astro";
-import "../styles/global.css";
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Home Page";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Head/>
-
-    <h1>{pageTitle}</h1>
-    <h2>... and my new Astro site!</h2>
-    <h1>Hoang Astro Site</h1>
-    <Footer />
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
