--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,19 @@ h1 {
 }
 
 /* Nav styles */
+.hamburger {
+    padding-right: 20px;
+    cursor: pointer;
+}
+
+.hamburger .line {
+    display: block;
+    width: 40px;
+    height: 5px;
+    margin-bottom: 10px;
+    background-color: #ff9776;
+}
+
 .nav-links {
     width: 100%;
     top: 5rem;
@@ -64,4 +77,15 @@ h1 {
         padding: 15px 20px;
     }
 
+    .hamburger {
+        display: none;
+    }
+}
+
+
+
+.skill {
+    color: navy;
+    font-weight: bold;
+    text-transform: capitalize;
 }
