--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,13 +1,20 @@
 ---
+import Tags from "../components/Tags.astro";
 import BaseLayout from "./BaseLayout.astro";
-
+import { fade } from "astro:transitions";
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <p>Written by {frontmatter.author}</p>
-  <p>Published on: {frontmatter.pubDate.toString().slice(0, 10)}</p>
-  <p><em>{frontmatter.description}</em></p>
+  <p transition:animate={fade({ duration: "2s" })}>
+    <em>{frontmatter.description}</em>
+  </p>
+  <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
+
+  <p>Written by: <a href="/about">{frontmatter.author}</a></p>
+
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-  <slot />
+  <Tags tags={frontmatter.tags}>
+    <slot />
+  </Tags>
 </BaseLayout>
