--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,9 +12,8 @@ const identity = {
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
-
 ---
 
 <BaseLayout pageTitle="About Me">
