--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,25 @@
 ---
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
+import BlogPost from "../components/BlogPost.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/global.css";
+const pageTitle = "Blog";
+const allPosts = await Astro.glob("../pages/posts/*.md");
 ---
 
-<BaseLayout pageTitle="Blog">
-  <h1>My Astro Learning Blog</h1>
+<BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li>
+    {
+      allPosts.map((post) => (
+        <BlogPost
+          sourceUrl={post.url}
+          title={post.frontmatter.title}
+          description={post.frontmatter.description}
+          image={post.frontmatter.image.url}
+          alt={post.frontmatter.image.alt}
+          pubDate={post.frontmatter.pubDate}
+        />
+      ))
+    }
   </ul>
 </BaseLayout>
