--- a/src/components/CircleButton.astro
+++ b/src/components/CircleButton.astro
@@ -4,7 +4,7 @@
 
 <div id="question-btn">
   <button>
-    <i class="fa fa-question" aria-hidden="true"></i>
+    <i class="fa fa-comment" aria-hidden="true"></i>
   </button>
 </div>
 
