--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,24 +18,57 @@ const { pageTitle } = Astro.props;
     <title>{pageTitle}</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
     <ViewTransitions />
   </head>
+  <div id="sidebar">
+    <button id="close-btn" onclick="toggleSideBar()">
+      <i class="fa fa-xmark"></i>
+    </button>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about/" data-astro-reload>About</a></li>
+      <li><a href="/blog/">Blog</a></li>
+      <li><a href="/tags">Tags</a></li>
+    </ul>
+  </div>
   <body>
-    <Header />
-    <h1 transition:animate="slide">{pageTitle}</h1>
-    <slot />
-    <CircleButton />
-    <ChatBox client:load />
-    <Footer />
+    <div class="container">
+      <Header />
+      <h1 transition:animate="slide">{pageTitle}</h1>
+      <slot />
+      <CircleButton />
+      <ChatBox client:load />
+      <Footer />
+    </div>
+
     <script>
       import "../scripts/menu.js";
     </script>
-    <style>
-      .html {
-        min-width: 400px;
-      }
-    </style>
   </body>
+  <script is:inline>
+    function toggleSideBar() {
+      document.getElementById("sidebar").classList.toggle("active");
+    }
+  </script>
+  <style>
+    :global(.dark) #sidebar ul li a {
+      color: white;
+    }
+    #sidebar {
+      display: flex;
+      flex-direction: column;
+    }
+    #close-btn {
+      width: 24px;
+      height: 24px;
+      margin: 8px;
+      position: relative;
+      align-self: flex-end;
+    }
+    #close-btn i {
+      color: #000;
+    }
+  </style>
 </html>
