--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Greeting from "../components/Greeting";
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Home Page";
+const pageTitle = "Wellcome to my page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
