--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,7 +1,7 @@
 ---
+import { fade } from "astro:transitions";
 import Tags from "../components/Tags.astro";
 import BaseLayout from "./BaseLayout.astro";
-import { fade } from "astro:transitions";
 const { frontmatter } = Astro.props;
 ---
 
@@ -14,6 +14,7 @@ const { frontmatter } = Astro.props;
   <p>Written by: <a href="/about">{frontmatter.author}</a></p>
 
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+  <slot />
   <Tags tags={frontmatter.tags}>
     <slot />
   </Tags>
