adjust ui and integrate with BE

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -28,6 +28,9 @@ const { sourceUrl, title, description, image, alt, pubDate } = Astro.props;
     text-decoration: none;
     font: 1em sans-serif;
   }
+  li {
+    list-style: none;
+  }
 
   :global(.dark) a {
     color: #fff;
