--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -23,7 +23,7 @@ const { posts } = Astro.props;
 ---
 
 <BaseLayout pageTitle={tag}>
-  <p>Posts tagged wit {tag}</p>
+  <p>Posts tagged with {tag}</p>
   <ul>
     {
       posts.map((post) => (
