--- a/src/layouts/ChatSession.astro
+++ b/src/layouts/ChatSession.astro
@@ -21,6 +21,7 @@ let token = await fetch("http://localhost:8080/token", {
 })
   .then((response) => {
     if (!response.ok) {
+      console.log(response);
       throw new Error("Network response was not ok");
     }
     return response.json();
@@ -63,7 +64,7 @@ let conversation = await fetch("http://localhost:8080/chat/conversation", {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    z-index: 99; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
     justify-content: center;
     align-items: center;
