--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,3 +11,25 @@ import ThemeIcon from "./ThemeIcon.astro";
     <Navigation />
   </nav>
 </header>
+
+<style>
+  header {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: fixed;
+    z-index: 9;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    background-color: white;
+  }
+
+  :global(.dark) header {
+    background-color: #1b1c1f;
+  }
+
+  header nav {
+    width: 100%;
+    max-width: 960px;
+    padding: 16px;
+  }
+</style>
