--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,59 +2,178 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/global.css";
 
-const identity = {
-  firstName: "Sarah",
-  country: "Canada",
-  occupation: "Technical Writer",
-  hobbies: ["photography", "birdwatching", "baseball"],
-};
-
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
-
-const happy = true;
-const finished = true;
-const goal = 3;
+import { getEntry } from "astro:content";
+const entry = await getEntry("authors", "me");
+const { Content, headings } = await entry.render();
 ---
 
 <BaseLayout pageTitle="About Me">
-  <h2>... and my new Astro site!</h2>
+  <div class="wrap-bg">
+    <div class="shape"></div>
+    <div class="shape"></div>
+  </div>
+  <div class="genreral-infor">
+    <div class="greeting">
+      <p>HELLO, My name is</p>
+      <p><b>Hoang Pham</b></p>
+      <i>Software Engineer @ExecutionLab</i>
+    </div>
+    <div class="wrap">
+      <div class="shape">
+        <div class="my-image">
+          <Content />
+        </div>
+      </div>
+    </div>
+  </div>
+  <button id="btn-download-cv">Download my resume</button>
+  <div class="resume">
+    <p>
+      <i>
+        <b>
+          I'm Hoang Pham, a tech aficionado from PhuRieng, born in '92. UIT
+          University honed my skills in Dart, Kotlin, Swift, and Python. Two
+          years in mobile development taught me the art of crafting
+          user-friendly apps, while a year in backend development solidified my
+          Python prowess. Eager for innovation, I ventured into the cloud with
+          Google Cloud. Today, I stand as a digital pioneer, driven by curiosity
+          and a thirst for pushing boundaries. With each project, I strive to
+          redefine the limits of technology, leaving a lasting impact on the
+          world of software engineering.
+        </b>
+      </i>
+    </p>
+  </div>
 
-  <p>
-    I am working through Astro's introductory tutorial. This is the second page
-    on my website, and it's the first one I built myself!
-  </p>
-
-  <p>
-    This site will update as I complete more of the tutorial, so keep checking
-    back and see how my journey is going!
-  </p>
-  {happy && <p>I am happy to be learning Astro!</p>}
-
-  {finished && <p>I finished this tutorial!</p>}
-
-  {
-    goal === 3 ? (
-      <p>My goal is to finish in 3 days.</p>
-    ) : (
-      <p>My goal is not 3 days.</p>
-    )
-  }
-  <p>Here are a few facts about me:</p>
-  <ul>
-    <li>My name is {identity.firstName}.</li>
-    <li>
-      I live in {identity.country} and I work as a {identity.occupation}.
-    </li>
-    {
-      identity.hobbies.length >= 2 && (
-        <li>
-          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
-        </li>
-      )
+  <style>
+    .resume {
+      display: flex;
+      width: 100%;
+      justify-content: flex-end;
+      padding: 16px;
     }
-  </ul>
-  <p>My skills are:</p>
-  <ul>
-    {skills.map((skill) => <li class="skill">{skill}</li>)}
-  </ul>
+    .resume p {
+      max-width: 90ch;
+      display: flex;
+      text-align: center;
+    }
+
+    button {
+      padding: 12px 24px;
+      font-weight: bold;
+      border-radius: 5px;
+      border: none;
+      margin-bottom: 32px;
+      background-color: #d6861e;
+      color: #551b8c;
+    }
+    :global(.dark) button {
+      background-color: #176fc2;
+      color: #fff;
+    }
+
+    button:hover {
+      box-shadow: 0px 0px 10px 0px rgba(41, 37, 37, 0.9);
+    }
+    :global(.dark) button:hover {
+      box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.9);
+    }
+    .greeting {
+      min-width: 400px;
+    }
+    .genreral-infor {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      margin-top: 48px;
+      justify-content: space-between;
+      align-items: center;
+    }
+    @media screen and (max-width: 600px) {
+      .genreral-infor {
+        flex-direction: column;
+      }
+
+      .my-image {
+        margin: 32px 8px;
+      }
+    }
+    .circular-image {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      overflow: hidden; /* Ensures the image doesn't overflow outside the circular area */
+    }
+
+    .wrap {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .shape {
+      width: 420px;
+      height: 420px;
+      background: linear-gradient(
+        64.00916346799386deg,
+        rgba(243, 72, 104, 1) 23.44140625%,
+        rgba(242, 71, 104, 1) 23.44140625%,
+        rgba(158, 0, 236, 1) 79.84765625%
+      );
+      animation: wave 4s ease-in-out infinite;
+    }
+    .wrap-bg .shape {
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      bottom: -30px;
+      right: 0;
+      opacity: 0.1;
+      z-index: 1;
+      &:nth-of-type(2) {
+        width: 800px;
+        height: 800px;
+        position: absolute;
+        top: -200px;
+        left: -400px;
+        opacity: 0.1;
+        z-index: -1;
+      }
+    }
+
+    @keyframes wave {
+      0%,
+      100% {
+        border-radius: 70% 30% 72% 28% / 27% 61% 39% 73%;
+      }
+      50% {
+        border-radius: 77% 23% 54% 46% / 40% 38% 62% 60%;
+      }
+    }
+  </style>
+
+  <script>
+    function downloadCVFile() {
+      const fileUrl: string =
+        "https://drive.google.com/uc?export=download&id=1sJ1qPpTCwwv13xXnXTVCRJRundZ5r4G4";
+      const link: HTMLAnchorElement = document.createElement("a");
+      link.href = fileUrl;
+      link.download = "PHAM-DUC-HOANG.pdf";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
+    let mybutton = document.getElementById(
+      "btn-download-cv"
+    ) as HTMLButtonElement;
+
+    mybutton.addEventListener("click", downloadCV);
+
+    function downloadCV(event) {
+      event.preventDefault();
+      downloadCVFile();
+    }
+  </script>
 </BaseLayout>
