--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@ html.dark {
 
 body .container {
     margin: auto;
-    padding: 1rem;
+    padding: 56px 0px 16px 0px;
     width: 100%;
     max-width: 960px;
     line-height: 1.5;
@@ -68,7 +68,6 @@ nav {
     background-color: #ff9776;
     display: none;
     margin: 0;
-
 }
 
 .nav-links a {
