--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import BlogPost from "../../components/BlogPost.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
@@ -21,7 +22,7 @@ export const getStaticPaths = async () => {
 const { tag } = Astro.params;
 const { posts } = Astro.props;
 
-export const prerender = true;
+
 ---
 
 <BaseLayout pageTitle={tag}>
