--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import Tags from "../../components/Tags.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
