--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,62 +3,62 @@ export const prerender = false;
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Wellcome to my page";
 
-const user_name = import.meta.env.SECRET_USERNAME;
-const pass_word = import.meta.env.SECRET_PASSWORD;
+// const user_name = import.meta.env.SECRET_USERNAME;
+// const pass_word = import.meta.env.SECRET_PASSWORD;
 
-if (!Astro.cookies.has("token")) {
-  await fetch("http://localhost:8080/token", {
-    method: "POST",
-    headers: {
-      accept: "application/json",
-      "Content-Type": "application/x-www-form-urlencoded",
-    },
-    body: new URLSearchParams({
-      grant_type: "",
-      username: `${user_name}`,
-      password: `${pass_word}`,
-      scope: "",
-      client_id: "",
-      client_secret: "",
-    }),
-  })
-    .then((response) => {
-      if (!response.ok) {
-        throw new Error("Network response was not ok");
-      }
-      return response.json();
-    })
-    .then((data) => {
-      Astro.cookies.set("token", data);
-      return data;
-    })
-    .catch((error) => {
-      console.error("There was a problem with your fetch operation:", error);
-    });
-}
-let token = Astro.cookies.get("token");
-if (!Astro.cookies.has("conversation")) {
-  await fetch("http://localhost:8080/chat/conversation", {
-    method: "POST",
-    headers: {
-      accept: "application/json",
-      Authorization: `Bearer ${JSON.parse(token.value).access_token}`,
-    },
-    body: JSON.stringify({}), // Add your request body here if needed
-  })
-    .then(async (response) => {
-      let data = await response.json();
-      Astro.cookies.set("conversation", data);
-      console.log("set conversation", data);
-      return data;
-    })
-    .catch((error) => {
-      console.error("There was a problem with your fetch operation:", error);
-    });
-}
+// if (!Astro.cookies.has("token")) {
+//   await fetch("http://localhost:8080/token", {
+//     method: "POST",
+//     headers: {
+//       accept: "application/json",
+//       "Content-Type": "application/x-www-form-urlencoded",
+//     },
+//     body: new URLSearchParams({
+//       grant_type: "",
+//       username: `${user_name}`,
+//       password: `${pass_word}`,
+//       scope: "",
+//       client_id: "",
+//       client_secret: "",
+//     }),
+//   })
+//     .then((response) => {
+//       if (!response.ok) {
+//         throw new Error("Network response was not ok");
+//       }
+//       return response.json();
+//     })
+//     .then((data) => {
+//       Astro.cookies.set("token", data);
+//       return data;
+//     })
+//     .catch((error) => {
+//       console.error("There was a problem with your fetch operation:", error);
+//     });
+// }
+// let token = Astro.cookies.get("token");
+// if (!Astro.cookies.has("conversation")) {
+//   await fetch("http://localhost:8080/chat/conversation", {
+//     method: "POST",
+//     headers: {
+//       accept: "application/json",
+//       Authorization: `Bearer ${JSON.parse(token.value).access_token}`,
+//     },
+//     body: JSON.stringify({}), // Add your request body here if needed
+//   })
+//     .then(async (response) => {
+//       let data = await response.json();
+//       Astro.cookies.set("conversation", data);
+//       console.log("set conversation", data);
+//       return data;
+//     })
+//     .catch((error) => {
+//       console.error("There was a problem with your fetch operation:", error);
+//     });
+// }
 
-// console.log(64, Astro.cookies.get("token"));
-console.log(65, Astro.cookies.get("conversation"));
+// // console.log(64, Astro.cookies.get("token"));
+// console.log(65, Astro.cookies.get("conversation"));
 ---
 
 <BaseLayout pageTitle={pageTitle} />
