--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -20,6 +20,7 @@ const { tags} = Astro.props;
     .tags {
       display: flex;
       flex-wrap: wrap;
+      margin: 16px 0px;
     }
   
     .tag {
