--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,16 +6,42 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <p transition:animate={fade({ duration: "2s" })}>
+  <p class="description" transition:animate={fade({ duration: "2s" })}>
     <em>{frontmatter.description}</em>
   </p>
   <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
 
   <p>Written by: <a href="/about">{frontmatter.author}</a></p>
 
-  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+  <dir class="img-container">
+    <img
+      class="img-illustration"
+      src={frontmatter.image.url}
+      alt={frontmatter.image.alt}
+    />
+  </dir>
   <slot />
+
   <Tags tags={frontmatter.tags}>
     <slot />
   </Tags>
 </BaseLayout>
+
+<style>
+  .description {
+    padding-top: 16px;
+  }
+
+  .img-illustration {
+    width: 50%;
+    display: flex;
+    margin: 16px 24px;
+  }
+  .img-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
