--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,10 +1,12 @@
 ---
-export const prerender = false;
 import BlogPost from "../../components/BlogPost.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
+export const prerender = true;
 export const getStaticPaths = async () => {
   const allPosts = await Astro.glob("../posts/*.md");
+
+  console.log("allPosts", allPosts);
   const uniqueTags = [
     ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
   ];
@@ -21,8 +23,6 @@ export const getStaticPaths = async () => {
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
-
-
 ---
 
 <BaseLayout pageTitle={tag}>
