complete intergrate ask

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,8 +3,8 @@
 ---
 
 <div transition:animate="fade" class="nav-links">
-  <a href="/">Home</a>
-  <a href="/about/" data-astro-reload>About</a>
+  <!-- data-astro-reload  use for full page reload-->
+  <a href="/" data-astro-reload>About</a>
   <a href="/blog/">Blog</a>
   <a href="/tags">Tags</a>
 </div>
