--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -4,8 +4,7 @@
 
 <div id="mySidenav" class="sidenav">
   <button id="myClosebtn" class="closebtn" onclick="closeNav()">&times;</button>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
+  <a href="/">About</a>
   <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
 </div>
