--- a/src/layouts/ChatSession.astro
+++ b/src/layouts/ChatSession.astro
@@ -1,13 +1,9 @@
 ---
 import ChatBox from "../components/ChatBox.jsx";
-
-
 ---
 
 <div id="overlay">
-  <ChatBox
-    client:load
-  />
+  <ChatBox client:load />
 </div>
 
 <style>
