--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,15 +32,15 @@ const { Content } = await entry.render();
     <p>
       <i>
         <b>
-          Hello there, I'm Hoang Pham, a tech aficionado from PhuRieng, born in
-          '92. UIT University honed my skills in Dart, Kotlin, Swift, and
-          Python. Two years in mobile development taught me the art of crafting
-          user-friendly apps, while a year in backend development solidified my
-          Python prowess. Eager for innovation, I ventured into the cloud with
-          Google Cloud, AWS. Today, I stand as a digital pioneer, driven by
-          curiosity and a thirst for pushing boundaries. With each project, I
-          strive to redefine the limits of technology, leaving a lasting impact
-          on the world of software engineering.
+          A tech aficionado from PhuRieng, born in '92. UIT University honed my
+          skills in Dart, Kotlin, Swift, and Python. Two years in mobile
+          development taught me the art of crafting user-friendly apps, while a
+          year in backend development solidified my Python prowess. Eager for
+          innovation, I ventured into the cloud with Google Cloud, AWS. Today, I
+          stand as a digital pioneer, driven by curiosity and a thirst for
+          pushing boundaries. With each project, I strive to redefine the limits
+          of technology, leaving a lasting impact on the world of software
+          engineering.
         </b>
       </i>
     </p>
@@ -172,7 +172,7 @@ const { Content } = await entry.render();
     }
 
     let mybutton = document.getElementById(
-      "btn-download-cv"
+      "btn-download-cv",
     ) as HTMLButtonElement;
 
     mybutton.addEventListener("click", downloadCV);
