--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,10 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import Header from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
 import { ViewTransitions } from "astro:transitions";
-import CircleButton from "../components/CircleButton.astro";
+import CircleButton from "@components/CircleButton.astro";
 
-import SideBar from "../components/SideBar.astro";
+import SideBar from "@components/SideBar.astro";
 import ChatSession from "./ChatSession.astro";
 
 const { pageTitle } = Astro.props;
@@ -28,12 +27,10 @@ const { pageTitle } = Astro.props;
   <body>
     <SideBar />
     {pageTitle == "About Me" && <ChatSession transition:persist />}
-    <Header />
     <div class="container">
       <div class="page-content">
         <slot />
-        {pageTitle == "About Me" && <CircleButton />}
-        <Footer />
+        <CircleButton />
       </div>
     </div>
 
