--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,6 +1,6 @@
 ---
 import { fade } from "astro:transitions";
-import Tags from "../components/Tags.astro";
+import Tags from "@components/Tags.astro";
 import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
