--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,4 +1,3 @@
-
 <button id="themeToggle">
   <svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
@@ -18,6 +17,9 @@
   #themeToggle {
     border: 0;
     background: none;
+    position: fixed;
+    top: 16px;
+    right: 16px;
   }
   .sun {
     fill: black;
