--- a/src/components/CircleButton.astro
+++ b/src/components/CircleButton.astro
@@ -1,4 +1,3 @@
-
 <div id="question-btn">
   <button>
     <i class="fa fa-comment" aria-hidden="true"></i>
@@ -14,6 +13,7 @@
   }
 
   #question-btn button {
+    cursor: pointer;
     width: 60px; /* Adjust as needed */
     height: 60px; /* Adjust as needed */
     background-color: #007bff; /* Change color as needed */
