--- a/src/components/Sections/general/General.astro
+++ b/src/components/Sections/general/General.astro
@@ -13,6 +13,7 @@ const { Content } = await entry.render();
     <div class="shape"></div>
     <div class="shape"></div>
   </div>
+  <div class="stars"></div>
   <div class="container">
     <div class="genreral-infor">
       <Greeting client:load />
@@ -33,10 +34,18 @@ const { Content } = await entry.render();
     <Resume client:load />
   </div>
 
-  <style>
+  <style lang="scss">
+    .stars {
+      background-image: url("../../../assets/stars.png");
+      background-size: cover;
+      background-position: bottom;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: -99;
+    }
     .container {
       margin: auto;
-      // padding: 56px 0 16px 0;
       width: 100%;
       max-width: 960px;
       line-height: 1.5;
@@ -52,19 +61,12 @@ const { Content } = await entry.render();
       margin-bottom: 32px;
       background-color: #d6861e;
       color: #551b8c;
-    }
-    :global(.dark) button {
-      background-color: #176fc2;
-      color: #fff;
+      cursor: pointer;
     }
 
     button:hover {
       box-shadow: 0px 0px 10px 0px rgba(41, 37, 37, 0.9);
     }
-    :global(.dark) button:hover {
-      box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.9);
-    }
-
     .genreral-infor {
       display: flex;
       flex-direction: row;
@@ -162,7 +164,7 @@ const { Content } = await entry.render();
     }
 
     let mybutton = document.getElementById(
-      "btn-download-cv",
+      "btn-download-cv"
     ) as HTMLButtonElement;
 
     mybutton.addEventListener("click", downloadCV);
