--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -19,7 +19,8 @@
     background: none;
     position: fixed;
     top: 16px;
-    right: 16px;
+    left: 16px;
+    z-index: 999999;
   }
   .sun {
     fill: black;
