--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,25 +14,24 @@
 
 // Define styles for html element
 html {
-  background-color: $background-light;
+  background: linear-gradient(180deg, #111132, #0c0c1d);
   font-family: sans-serif;
   min-width: 400px;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 
-  &.dark {
-    background-color: $background-dark;
-    color: $text-color-dark;
-  }
 }
 section {
   height: 100vh;
   scroll-snap-align: center;
+  overflow: hidden;
+
 }
 
 // Define styles for body and .container
 body {
   font-family: Poppins;
+  color: #fff
 
 }
 
@@ -82,5 +81,29 @@ h1 {
     display: flex;
     flex-direction: column;
     margin: 10px;
+  }
+}
+
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+
+@mixin mobile {
+  @media (max-width: 738px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (max-width: 1024px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (max-width: 1366px) {
+    @content;
   }
 }
