--- a/src/components/Sections/general/General.astro
+++ b/src/components/Sections/general/General.astro
@@ -16,7 +16,9 @@ const { Content } = await entry.render();
   <div class="stars"></div>
   <div class="container">
     <div class="genreral-infor">
-      <Greeting client:load />
+      <FadeIn client:load x={-30}>
+        <Greeting client:load />
+      </FadeIn>
       <FadeIn client:load x={30}>
         <div class="wrap">
           <div class="shape">
@@ -31,7 +33,10 @@ const { Content } = await entry.render();
     <FadeIn client:load x={-10}>
       <button id="btn-download-cv">Download my resume</button>
     </FadeIn>
-    <Resume client:load />
+
+    <FadeIn client:load x={0} delay={0.6} y={30}>
+      <Resume />
+    </FadeIn>
   </div>
 
   <style lang="scss">
@@ -47,10 +52,13 @@ const { Content } = await entry.render();
     .container {
       margin: auto;
       width: 100%;
+      height: 100vh;
       max-width: 960px;
       line-height: 1.5;
       display: flex;
       flex-direction: column;
+      align-content: center;
+      justify-content: space-evenly;
     }
     button {
       max-width: fit-content;
@@ -61,11 +69,14 @@ const { Content } = await entry.render();
       margin-bottom: 32px;
       background-color: #d6861e;
       color: #551b8c;
+      transition: all 0.3s ease;
+
       cursor: pointer;
     }
 
     button:hover {
-      box-shadow: 0px 0px 10px 0px rgba(41, 37, 37, 0.9);
+      box-shadow: 10px 10px 100px 100px rgba(41, 37, 37, 0.9);
+      transform: translateY(-2px);
     }
     .genreral-infor {
       display: flex;
