--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,6 +20,7 @@ html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 
+
 }
 section {
   height: 100vh;
@@ -32,6 +33,12 @@ section {
 body {
   font-family: Poppins;
   color: #fff
+
+}
+
+html,body {
+  max-width: 100vw;
+  overflow-x: clip;
 
 }
 
