--- a/src/components/Sections/General/General.astro
+++ b/src/components/Sections/General/General.astro
@@ -23,7 +23,7 @@ const { Content } = await entry.render();
         <div class="wrap">
           <div class="shape">
             <div class="my-image">
-              <Content />
+              <!-- <Content /> -->
             </div>
           </div>
         </div>
