--- a/src/components/Sections/General/Greeting/greeting.scss
+++ b/src/components/Sections/General/Greeting/greeting.scss
@@ -2,4 +2,15 @@
 .greeting {
     min-width: 400px;
     margin-bottom: 32px;
+    p {
+        font-size: 40px;
+        b{
+            font-size: 40px;
+            font-weight: bold;
+        }
+    }
+    i{
+        font-size: 16px;
+        font-weight: bold;
+    }
 }
