--- a/src/components/Sections/General/Resume/resume.scss
+++ b/src/components/Sections/General/Resume/resume.scss
@@ -6,6 +6,8 @@
     justify-content: flex-end;
     margin: auto;
     p {
+        font-size: 20px;
+        
         max-width: 100ch;
         display: flex;
         text-align: center;
