--- a/src/components/Sections/Project/project.scss
+++ b/src/components/Sections/Project/project.scss
@@ -37,11 +37,13 @@
       .imageContainer {
         flex: 1;
         height: 50%;
+        border-radius: 2cap;
 
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          border-radius: 2cap;
         }
       }
 
@@ -57,7 +59,7 @@
         }
 
         p {
-          color: gray;
+          color: rgb(164, 164, 164);
           font-size: 20px;
         }
 
